# surf_nx

./: .eslintrc.json  .gitignore  Cargo.toml  nx.json  opencode.json  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  vite.config.ts
.cargo/: config.toml
.opencode/skills/git-commit/: SKILL.md
apps/web/: next.config.js  project.json  tsconfig.app.json  tsconfig.json  tsconfig.spec.json
apps/web/app/: layout.tsx  page.tsx
apps/web/src/: app.css  index.html  main.tsx
crates/cli/: Cargo.toml  project.json
crates/cli/src/: main.rs
crates/sbf-surf-name-registry/: Cargo.toml  project.json
crates/sbf-surf-name-registry/src/: instruction.rs  lib.rs
crates/sbf-surf-signals/: Cargo.toml  project.json
crates/sbf-surf-signals/src/: instruction.rs  lib.rs
crates/sbf-surf-token/: Cargo.toml  README.md  project.json
crates/sbf-surf-token/src/: instruction.rs  lib.rs  state.rs
crates/shared-proto/: Cargo.toml  build.rs  project.json
crates/shared-proto/src/: lib.rs
crates/surf-cli/: Cargo.toml  project.json
crates/surf-cli/src/: events.rs  main.rs
crates/surf-cli/tests/: integration.rs
crates/surf-client/: Cargo.toml  README.md  project.json
crates/surf-client-backend-browser/: Cargo.toml  project.json
crates/surf-client-backend-browser/src/: backend.rs  lib.rs  playwright_harness.rs
crates/surf-client-backend-http/: Cargo.toml  project.json
crates/surf-client-backend-http/src/: lib.rs
crates/surf-client-backend-http/tests/: integration.rs
crates/surf-client-backend-memory/: Cargo.toml  project.json
crates/surf-client-backend-memory/src/: backend.rs  lib.rs
crates/surf-client-backend-native/: Cargo.toml  project.json
crates/surf-client-backend-native/src/: backend.rs  lib.rs
crates/surf-client-backend-native/tests/: integration.rs
crates/surf-client-http-config/: Cargo.toml  project.json
crates/surf-client/src/: backend.rs  client.rs  error.rs  lib.rs  names.rs  query.rs  role.rs  rpc_types.rs  signals.rs  signer.rs  token.rs
crates/surf-events/: Cargo.toml  project.json
crates/surf-events-server/: Cargo.toml  project.json
crates/surf-events-server/src/: checkpoint.rs  config.rs  error.rs  lib.rs  main.rs  publisher.rs  runtime.rs
crates/surf-events-server/src/sync/: activity.rs  balances.rs  follows.rs  helpers.rs  mod.rs  names.rs  tokens.rs
crates/surf-events/src/: activity_kind.rs  activity_record.rs  event.rs  follow_record.rs  lib.rs  subject.rs
crates/surf-executor/: Cargo.toml  project.json
crates/surf-executor/src/: lib.rs  native_tests.rs  parallel.rs  wasm_tests.rs
crates/surf-http-backend-config/: Cargo.toml  project.json
crates/surf-http-backend-config/src/: config.rs  lib.rs
crates/surf-protocol/: Cargo.toml  README.md  project.json
crates/surf-protocol/src/: instruction.rs  lib.rs  pda.rs  state.rs  validation.rs
crates/surf-protocol/src/instruction/: registry.rs  signals.rs  token.rs
crates/surf-provider-browser/: Cargo.toml  project.json
crates/surf-provider-browser/src/: backend.rs  lib.rs  playwright_harness.rs
crates/surf-provider-memory/: Cargo.toml  project.json
crates/surf-provider-memory/src/: backend.rs  tests.rs
crates/surf-provider-native/: Cargo.toml  project.json
crates/surf-provider-native/src/: lib.rs
crates/surf-provider-native/tests/: integration.rs
crates/surf-query/: Cargo.toml  project.json
crates/surf-query/src/: error.rs  lib.rs
crates/surf-store/: Cargo.toml  README.md  project.json
crates/surf-store/src/: column_families.rs  error.rs  lib.rs  memory.rs  native.rs  opfs.rs  playwright_harness.rs  trait.rs  wasm_tests.rs
crates/surf-sync/: Cargo.toml  project.json
crates/surf-sync/src/: activity_event_syncer.rs  activity_syncer.rs  balance_event_syncer.rs  balance_syncer.rs  checkpoint.rs  config.rs  error.rs  follow_event_syncer.rs  follow_event_syncer_wasm.js  follow_syncer.rs  lib.rs  name_event_syncer.rs  name_syncer.rs  parser.rs  sleep.rs  sync_service.rs
crates/surf-web-wasm/: Cargo.toml  Readme.md  project.json
crates/surf-web-wasm/src/: lib.rs
crates/test-integrations/: Cargo.toml  project.json
crates/test-integrations/src/: lib.rs
crates/test-nats-server/: Cargo.toml  project.json
crates/test-nats-server/src/: context.rs  error.rs  lib.rs  server.rs
crates/test-nats-server/tests/: integration.rs
crates/test-rpc-validator/: Cargo.toml  README.md  project.json
crates/test-rpc-validator/src/: config.rs  error.rs  handlers.rs  lib.rs  main.rs  rpc_types.rs  server.rs
crates/test-web-services/: Cargo.toml  project.json
crates/test-web-services/src/: config.rs  context.rs  error.rs  events.rs  lib.rs  main.rs  nats.rs  programs.rs  validator.rs
libs/shared/: package.json  project.json  tsconfig.json
proto/: buf.gen.yaml  buf.yaml  message.proto
