[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
axum = "0.8"
base64 = "0.22"
bincode = "1.3"
bytemuck = { version = "1", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
getrandom = "0.3"
pinocchio = "0.8"
pinocchio-system = "0.2"
reqwest = "0.12"
rstest = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serial_test = "3"
solana-account = "3.2.0"
solana-hash = "3.1.0"
solana-instruction = "3.0.0"
solana-keypair = "3.0.0"
solana-message = "3.0.1"
solana-native-token = "3.0.0"
solana-program = "3.0.0"
solana-pubkey = "3.0.0"
solana-sdk-ids = "3.0.0"
solana-signature = "3.3.0"
solana-signer = "3.0.0"
solana-system-interface = "2.0.0"
solana-transaction = "3.1.0"
surf-client = { path = "crates/surf-client" }
surf-protocol = { path = "crates/surf-protocol" }
surf-provider-memory = { path = "crates/surf-provider-memory" }
tempfile = "3"
thiserror = "2.0"
tokio = "1"
tower-http = { version = "0.6", features = ["cors"] }
