[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
async-nats = "0.42"
axum = "0.8"
base64 = "0.22"
bincode = "1.3"
borsh = "1"
bytes = "1"
bytemuck = { version = "1", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
futures = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }
gloo = { version = "0.11", features = ["futures"] }
hex = "0.4"
js-sys = "0.3"
pinocchio = "0.8"
web-sys = "0.3"
pinocchio-system = "0.2"
reqwest = "0.12"
rstest = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serial_test = "3"
solana-account = "3.2.0"
solana-hash = "3.1.0"
solana-instruction = "3.0.0"
solana-keypair = "3.0.0"
solana-message = "3.0.1"
solana-native-token = "3.0.0"
solana-program = "3.0.0"
solana-pubkey = { version = "3.0.0", features = ["serde"] }
solana-sdk-ids = "3.0.0"
solana-signature = "3.0.0"
solana-signer = "3.0.0"
solana-system-interface = "2.0.0"
solana-transaction = "3.1.0"
surf-client = { path = "crates/surf-client" }
surf-client-backend-browser = { path = "crates/surf-client-backend-browser" }
surf-client-http-config = { path = "crates/surf-client-http-config" }
surf-events = { path = "crates/surf-events" }
surf-protocol = { path = "crates/surf-protocol" }
surf-query = { path = "crates/surf-query" }
surf-store = { path = "crates/surf-store" }
surf-sync = { path = "crates/surf-sync" }
surf-client-backend-http = { path = "crates/surf-client-backend-http" }
surf-client-backend-memory = { path = "crates/surf-client-backend-memory" }
surf-client-backend-native = { path = "crates/surf-client-backend-native" }
tempfile = "3"
thiserror = "2.0"
tokio = "1"
tower-http = { version = "0.6", features = ["cors"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
