[package]
name = "cli"
version = "0.1.0"
edition = "2021"
description = "Surf CLI tool"

[[bin]]
name = "surf"
path = "src/main.rs"

[dependencies]
shared-proto = { path = "../shared-proto" }
prost = "0.13"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
