[package]
name = "surf-client-backend-memory"
version = "0.1.0"
edition = "2021"

[dependencies]
mollusk-svm = "0.11"
solana-account = { workspace = true }
solana-hash = { workspace = true }
solana-instruction = { workspace = true }
solana-message = { workspace = true }
solana-native-token = { workspace = true }
solana-pubkey = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }
solana-transaction = { workspace = true }
surf-client = { workspace = true }
surf-protocol = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "rt-multi-thread"] }

[dev-dependencies]
rstest = { workspace = true }
solana-keypair = { workspace = true }
surf-client = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "sync", "rt-multi-thread"] }
