[package]
name = "surf-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
surf-protocol = { workspace = true }
solana-pubkey = { workspace = true }
solana-instruction = { workspace = true }
solana-message = { workspace = true }
solana-transaction = { workspace = true, features = ["bincode"] }
solana-signature = { workspace = true }
solana-signer = { workspace = true }
solana-keypair = { workspace = true }
solana-account = { workspace = true }
solana-hash = { workspace = true }
solana-sdk-ids = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["wasm_js"] }

[dev-dependencies]
rstest = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
reqwest = { workspace = true, features = ["json"] }
serial_test = { workspace = true }
tempfile = { workspace = true }
solana-hash = { workspace = true }
solana-keypair = { workspace = true }
solana-message = { workspace = true }
solana-native-token = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }
solana-system-interface = { workspace = true, features = ["bincode"] }
solana-transaction = { workspace = true, features = ["bincode"] }
