[package]
name = "surf-provider-native"
version = "0.1.0"
edition = "2021"

[dependencies]
surf-client = { workspace = true }
surf-protocol = { workspace = true }
surf-http-backend-config = { workspace = true }
solana-pubkey = { workspace = true }
solana-instruction = { workspace = true }
solana-message = { workspace = true }
solana-transaction = { workspace = true, features = ["bincode"] }
solana-signature = { workspace = true }
solana-account = { workspace = true }
solana-hash = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
dirs = "5"
solana-keypair = { workspace = true }
solana-hash = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }
solana-native-token = { workspace = true }
solana-system-interface = { workspace = true, features = ["bincode"] }
solana-sdk-ids = "2.0"
