[package]
name = "surf-query"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
surf-protocol = { workspace = true }
surf-store = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
