[package]
name = "surf-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
solana-account = { workspace = true }
solana-pubkey = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-signature = { workspace = true }
surf-client = { workspace = true }
surf-events = { workspace = true }
surf-protocol = { workspace = true }
surf-store = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-nats = { workspace = true }
tokio = { workspace = true, features = ["time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo = { workspace = true }
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

# TODO: Uncomment when test dependencies are available
# [dev-dependencies]
# nats-server-test = { path = "../nats-server-test" }
# reqwest = { workspace = true }
# rpc-test-validator = { path = "../rpc-test-validator" }
# rstest = { workspace = true }
# solana-keypair = { workspace = true }
# solana-hash = { workspace = true }
# solana-native-token = { workspace = true }
# solana-signer = { workspace = true }
# solana-transaction = { workspace = true }
# surf-events-server = { path = "../surf-events-server" }
# surf-provider-native = { path = "../surf-provider-native" }
# surf-query = { workspace = true }
# tokio = { workspace = true, features = ["rt", "macros", "time", "rt-multi-thread"] }
