[package]
name = "test-nats-server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-nats = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[dev-dependencies]
bytes = { workspace = true }
futures = { workspace = true }
