[package]
name = "test-rpc-validator"
version = "0.1.0"
edition = "2021"

[dependencies]
surf-provider-memory = { workspace = true }
surf-client = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
solana-pubkey = { workspace = true }
solana-account = { workspace = true }
solana-transaction = { workspace = true, features = ["bincode"] }
solana-signature = { workspace = true }
solana-hash = { workspace = true }
thiserror = { workspace = true }
tower-http = { workspace = true }
