[package]
name = "test-web-services"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "test-web-services"
path = "src/main.rs"

[dependencies]
async-nats = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
solana-pubkey = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "process", "sync", "signal"] }

[dev-dependencies]
surf-client = { workspace = true }
surf-client-backend-http = { workspace = true }
surf-query = { workspace = true }

[build-dependencies]